# Scratch

./: LICENSE
database/specialist/h28/pm2-1/: README.md  docker-compose.yml
database/specialist/h28/pm2-2/: README.md
python/distributions/: README.md  normal_distribution.py
python/marketanalysis/src/util/: Correlation.py  Correlogram.py  DataLoader.py  DataTrimer.py  Parsers.py
python/marketanalysis/test/util/: CorrelationTest.py  (+5 more)
ruby/web/chat/: .gitignore  docker-compose.yml
rust/CheatSheets/: closures.rs  primitive_types.rs  std_read_lines.rs  strings.rs  tuples.rs  vectors.rs
rust/CheatSheets/fib/: Cargo.toml
rust/CheatSheets/guessing_game/: Cargo.toml
rust/chat/: Cargo.toml  README.md
rust/chat/db/: posts.sql
rust/chat/src/: lib.rs  main.rs  models.rs  schema.rs  view_models.rs
rust/chat/templates/: index.html.tera
rust/game_of_life/: Cargo.toml
rust/game_of_life/src/: main.rs
rust/ping_pong/: Cargo.toml  README.md
rust/ping_pong/src/: main.rs  redis_connection.rs  web_server.rs  web_socket_server.rs
rust/ping_pong/templates/: index.html.tera
rust/wasm/hello-world/: Cargo.toml  index.html  index.js  package.json  run-hello-world.sh
scala/ExecutionContext/: build.sbt
scala/GameOfLife/tools/: build.sbt
scala/Lisp/: build.sbt
scala/await/: build.sbt
scala/scalaz/CheatSheets/: Compose.scala  PointFree.scala  Primes.scala  ScratchOptionMonad.scala  ScratchReaderMonad.scala  ScratchStateMonad.scala  ScratchStateMonad0.scala  ScratchStateMonad2.scala  ScratchStateMonad3.scala  ScratchWriterMonad.scala
scala/web/chat/: build.sbt
(+118 files in other folders)
