[package]
name = "chat"
version = "0.1.0"
authors = ["ysato"]

[dependencies]
chrono = "0.4"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4.7"
rocket_codegen = "0.3.15"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
