[package]
name = "ping_pong"
version = "0.1.0"
authors = ["YuichiroSato <sato.yu1ro@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.5.13"
log = "0.4"
redis = "0.9.0"
rocket = "0.3.17"
rocket_codegen = "0.3.15"
rustc-serialize = "0.3.24"
ws = "0.7.8"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
